--- a/src/app/main/main-sidebar/main-sidebar.component.html
+++ b/src/app/main/main-sidebar/main-sidebar.component.html
@@ -1,7 +1,7 @@
  <!-- Main Sidebar Container -->
  <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a routerLink="/" class="brand-link">
     <img src="assets/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
     <span class="brand-text font-weight-light">AdminLTE 3</span>
@@ -22,40 +22,26 @@
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-        <!-- Add icons to the links using the .nav-icon class
-             with font-awesome or any other icon font library -->
-        <li class="nav-item has-treeview menu-open">
-          <a href="#" class="nav-link active">
-            <i class="nav-icon fas fa-tachometer-alt"></i>
-            <p>
-              Starter Pages
-              <i class="right fas fa-angle-left"></i>
-            </p>
-          </a>
-          <ul class="nav nav-treeview">
-            <li class="nav-item">
-              <a href="#" class="nav-link active">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Active Page</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>Inactive Page</p>
-              </a>
-            </li>
-          </ul>
-        </li>
+
         <li class="nav-item">
-          <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-th"></i>
+          <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <i class="nav-icon fas fa-home"></i>
             <p>
-              Simple Link
-              <span class="right badge badge-danger">New</span>
+              Home
             </p>
           </a>
         </li>
+
+        <li class="nav-item">
+          <a routerLink="/contacts" class="nav-link" routerLinkActive="active">
+            <i class="nav-icon fas fa-user"></i>
+            <p>
+              Contacts
+            </p>
+          </a>
+        </li>
+
+
       </ul>
     </nav>
     <!-- /.sidebar-menu -->
