update header and contacts

--- a/src/app/page/contacts/contacts.component.html
+++ b/src/app/page/contacts/contacts.component.html
@@ -16,7 +16,7 @@
 </section>
 
 <!-- Main content -->
-<section class="content">
+<section class="content app-content">
 
   <!-- Default box -->
   <div class="card card-solid">
