--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -5,12 +5,12 @@
     <li class="nav-item">
       <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
-    <li class="nav-item d-none d-sm-inline-block">
+    <!-- <li class="nav-item d-none d-sm-inline-block">
       <a routerLink="/" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a routerLink="/contacts" class="nav-link">Contact</a>
-    </li>
+    </li> -->
   </ul>
 
   <!-- SEARCH FORM -->
