--- a/src/app/main/main-sidebar/main-sidebar.component.html
+++ b/src/app/main/main-sidebar/main-sidebar.component.html
@@ -4,7 +4,7 @@
   <a routerLink="/" class="brand-link">
     <img src="assets/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
          style="opacity: .8">
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Nova Dev</span>
   </a>
 
   <!-- Sidebar -->
@@ -15,14 +15,14 @@
         <img src="assets/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
       </div>
       <div class="info">
-        <a href="#" class="d-block">Alexander Pierce</a>
+        <a href="#" class="d-block">Enrique Nuñez</a>
       </div>
     </div>
 
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-
+        <li class="nav-header">Start</li>
         <li class="nav-item">
           <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <i class="nav-icon fas fa-home"></i>
@@ -39,6 +39,30 @@
               Contacts
             </p>
           </a>
+        </li>
+        <li class="nav-header">Menu</li>
+        <li class="nav-item has-treeview menu-open">
+          <a href="#" class="nav-link" routerLinkActive="active">
+            <i class="nav-icon fas fa-users"></i>
+            <p>
+              Employee
+              <i class="right fas fa-angle-left"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="/employee/add" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Add Employee</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="/employee/list" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>List Employee</p>
+              </a>
+            </li>
+          </ul>
         </li>
 
 
